keycloak/templates/keycloak-postgres.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: keycloak
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: keycloak
          image: postgres:15
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
      restartPolicy: Always


---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: keycloak
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - protocol: TCP
      name: postgres
      port: 5432
      targetPort: 5432
